UX Additions and Edits
Added sticky nav, smooth scrolling, and nav section highlighting.
Edited Calendar styling.  Added review section

--- a/css/user-profile.css
+++ b/css/user-profile.css
@@ -1,4 +1,3 @@
-/* line 17, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +19,37 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../.rvm/gems/ruby-1.9.2-p320/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -71,14 +62,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   font-style: normal;
 }
 
-/* line 13, ../sass/user-profile.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 17, ../sass/user-profile.scss */
 body {
   color: #777777;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -91,35 +80,29 @@ body {
   margin: 50px 0;
 }
 
-/* line 28, ../sass/user-profile.scss */
 .clearfix, .user-heading, .user-calendar, .badges, .places, .places--where, .places--favs, .places--wants, .friends {
   zoom: 1;
 }
-/* line 30, ../sass/user-profile.scss */
 .clearfix:before, .user-heading:before, .user-calendar:before, .badges:before, .places:before, .places--where:before, .places--favs:before, .places--wants:before, .friends:before, .clearfix:after, .user-heading:after, .user-calendar:after, .badges:after, .places:after, .places--where:after, .places--favs:after, .places--wants:after, .friends:after {
   content: "\0020";
   display: block;
   height: 0;
   overflow: hidden;
 }
-/* line 36, ../sass/user-profile.scss */
 .clearfix:after, .user-heading:after, .user-calendar:after, .badges:after, .places:after, .places--where:after, .places--favs:after, .places--wants:after, .friends:after {
   clear: both;
 }
 
-/* line 41, ../sass/user-profile.scss */
 .float-left, .calendar-wrap, .activities-wrap {
   float: left;
 }
 
-/* line 45, ../sass/user-profile.scss */
 a {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
-/* line 47, ../sass/user-profile.scss */
 a:hover {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -127,7 +110,6 @@ a:hover {
   transition: all 0.3s ease-in-out;
 }
 
-/* line 55, ../sass/user-profile.scss */
 .icon {
   font-family: "FontAwesome";
   font-size: 1em;
@@ -135,14 +117,12 @@ a:hover {
   font-style: normal;
 }
 
-/* line 64, ../sass/user-profile.scss */
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   color: #1bb9b5;
   margin-bottom: 10px;
 }
 
-/* line 70, ../sass/user-profile.scss */
 h1 {
   font-size: 40px;
   line-height: 60px;
@@ -150,7 +130,6 @@ h1 {
   line-height: 3.75rem;
 }
 
-/* line 71, ../sass/user-profile.scss */
 h2 {
   font-size: 30px;
   line-height: 45px;
@@ -158,7 +137,6 @@ h2 {
   line-height: 2.8125rem;
 }
 
-/* line 72, ../sass/user-profile.scss */
 h3 {
   font-size: 24px;
   line-height: 36px;
@@ -166,7 +144,6 @@ h3 {
   line-height: 2.25rem;
 }
 
-/* line 73, ../sass/user-profile.scss */
 h4 {
   font-size: 18px;
   line-height: 27px;
@@ -174,7 +151,6 @@ h4 {
   line-height: 1.6875rem;
 }
 
-/* line 74, ../sass/user-profile.scss */
 h5 {
   font-size: 14px;
   line-height: 21px;
@@ -182,7 +158,6 @@ h5 {
   line-height: 1.3125rem;
 }
 
-/* line 75, ../sass/user-profile.scss */
 h6 {
   font-size: 12px;
   line-height: 18px;
@@ -190,7 +165,6 @@ h6 {
   line-height: 1.125rem;
 }
 
-/* line 80, ../sass/user-profile.scss */
 .btn {
   display: inline-block;
   height: 30px;
@@ -207,32 +181,32 @@ h6 {
   border-radius: 4px / 4px;
 }
 
-/* line 97, ../sass/user-profile.scss */
 .container {
   width: 1000px;
   margin: 20px auto;
 }
 
-/* line 102, ../sass/user-profile.scss */
 .left-panel {
   width: 200px;
   float: left;
   margin-right: 20px;
 }
 
-/* line 108, ../sass/user-profile.scss */
 .profile-content {
   width: 780px;
   float: left;
 }
 
-/* line 113, ../sass/user-profile.scss */
 .row {
   padding: 20px 0;
   border-bottom: 1px solid #ebebeb;
 }
 
-/* line 124, ../sass/user-profile.scss */
+.left-panel-user.sticky {
+  position: fixed;
+  top: 20px;
+}
+
 .user-img {
   position: relative;
   height: 240px;
@@ -240,7 +214,6 @@ h6 {
   margin-bottom: 1px;
 }
 
-/* line 131, ../sass/user-profile.scss */
 .user-score {
   height: 80px;
   background-color: #1bb9b5;
@@ -249,18 +222,15 @@ h6 {
   line-height: 2.125em;
 }
 
-/* line 139, ../sass/user-profile.scss */
 .user-score--value {
   padding-top: 14px;
   font-size: 3em;
 }
 
-/* line 146, ../sass/user-profile.scss */
 .user-score--title {
   font-size: 1.125em;
 }
 
-/* line 152, ../sass/user-profile.scss */
 .add-friend-btn {
   display: block;
   position: absolute;
@@ -276,16 +246,13 @@ h6 {
   cursor: pointer;
   font-size: 22px;
 }
-/* line 167, ../sass/user-profile.scss */
 .add-friend-btn:hover {
   background-color: rgba(255, 255, 255, 0.9);
 }
 
-/* line 172, ../sass/user-profile.scss */
 .user-nav {
   border-bottom: 1px solid #ebebeb;
 }
-/* line 177, ../sass/user-profile.scss */
 .user-nav li a {
   display: block;
   color: #0069a0;
@@ -295,25 +262,26 @@ h6 {
   background-color: whitesmoke;
   border-top: 1px solid #ebebeb;
 }
-/* line 188, ../sass/user-profile.scss */
 .user-nav li a:hover {
   background-color: white;
   color: #777777;
 }
 
-/* line 196, ../sass/user-profile.scss */
+.user-nav li a.selected {
+  background-color: white;
+  color: #777777;
+}
+
 .user-nav-icon {
   display: inline-block;
   width: 20px;
   margin-right: 6px;
 }
 
-/* line 205, ../sass/user-profile.scss */
 .user-heading {
   padding-top: 0;
 }
 
-/* line 210, ../sass/user-profile.scss */
 .user-name {
   font-size: 2.250em;
   font-weight: bold;
@@ -322,7 +290,6 @@ h6 {
   margin-bottom: 13.33333px;
 }
 
-/* line 220, ../sass/user-profile.scss */
 .user-motto {
   font-size: 2.250em;
   font-weight: 100;
@@ -330,7 +297,6 @@ h6 {
   letter-spacing: 0.05em;
   color: #777777;
 }
-/* line 229, ../sass/user-profile.scss */
 .user-motto:before, .user-motto:after {
   display: inline-block;
   position: relative;
@@ -339,18 +305,15 @@ h6 {
   font-weight: normal;
   color: #777777;
 }
-/* line 240, ../sass/user-profile.scss */
 .user-motto:before {
   content: "\201C";
   margin-right: 5px;
 }
-/* line 245, ../sass/user-profile.scss */
 .user-motto:after {
   content: "\201D";
   margin-left: 5px;
 }
 
-/* line 251, ../sass/user-profile.scss */
 .user-about p {
   font-size: 14px;
   line-height: 21px;
@@ -359,41 +322,33 @@ h6 {
   color: #777777;
 }
 
-/* line 263, ../sass/user-profile.scss */
 .calendar {
-  height: 400px;
+  height: auto;
   width: 500px;
-  border: 1px solid #ebebeb;
 }
 
-/* line 273, ../sass/user-profile.scss */
 .calendar-wrap {
   width: 500px;
   margin-right: 20px;
 }
 
-/* line 278, ../sass/user-profile.scss */
 .activities-wrap {
   width: 260px;
 }
 
-/* line 282, ../sass/user-profile.scss */
 .activities--date {
   color: #0069a0;
 }
 
-/* line 286, ../sass/user-profile.scss */
 .activity-single {
   margin-bottom: 10px;
 }
 
-/* line 290, ../sass/user-profile.scss */
 .activity-single--time {
   color: #777777;
   margin-bottom: 5px;
 }
 
-/* line 295, ../sass/user-profile.scss */
 .activity-single--summary {
   font-size: 12px;
   line-height: 18px;
@@ -401,19 +356,16 @@ h6 {
   line-height: 1.125rem;
 }
 
-/* line 299, ../sass/user-profile.scss */
 .activity-link {
   text-decoration: underline;
 }
 
-/* line 310, ../sass/user-profile.scss */
 .badge {
   float: left;
   width: 20%;
   text-align: center;
 }
 
-/* line 316, ../sass/user-profile.scss */
 .badge-image {
   margin-bottom: 10px;
   border: 5px solid #ebebeb;
@@ -427,7 +379,6 @@ h6 {
   margin-right: auto;
 }
 
-/* line 327, ../sass/user-profile.scss */
 .badge p {
   font-size: 12px;
   line-height: 18px;
@@ -437,17 +388,14 @@ h6 {
   text-transform: uppercase;
 }
 
-/* line 340, ../sass/user-profile.scss */
 .places--where, .places--favs, .places--wants {
   margin-bottom: 20px;
 }
 
-/* line 345, ../sass/user-profile.scss */
 .places-icon, .places-title {
   color: #0069a0;
 }
 
-/* line 349, ../sass/user-profile.scss */
 .places-icon {
   font-size: 18px;
   line-height: 27px;
@@ -455,12 +403,10 @@ h6 {
   line-height: 1.6875rem;
 }
 
-/* line 353, ../sass/user-profile.scss */
 .places-title {
   display: inline-block;
 }
 
-/* line 357, ../sass/user-profile.scss */
 .place-single {
   width: 100%;
   float: left;
@@ -469,7 +415,6 @@ h6 {
   margin-bottom: 10px;
 }
 
-/* line 365, ../sass/user-profile.scss */
 .place-single img {
   height: 80px;
   width: 80px;
@@ -478,7 +423,6 @@ h6 {
   margin-right: 10px;
 }
 
-/* line 373, ../sass/user-profile.scss */
 .place-name {
   font-size: 18px;
   line-height: 27px;
@@ -489,7 +433,6 @@ h6 {
   display: block;
 }
 
-/* line 380, ../sass/user-profile.scss */
 .place-single p {
   float: left;
   font-size: 10px;
@@ -500,18 +443,15 @@ h6 {
   color: #777777;
 }
 
-/* line 387, ../sass/user-profile.scss */
 .place-actions {
   float: right;
 }
-/* line 389, ../sass/user-profile.scss */
 .place-actions li {
   display: inline;
   float: left;
   padding: 10px;
   padding-left: 0;
 }
-/* line 394, ../sass/user-profile.scss */
 .place-actions li a {
   display: block;
   height: 60px;
@@ -523,17 +463,10 @@ h6 {
   font-size: 24px;
   color: white;
 }
-/* line 404, ../sass/user-profile.scss */
 .place-actions li a:hover {
   background-color: #0069a0;
 }
 
-/* line 414, ../sass/user-profile.scss */
-.user-friends {
-  border-bottom: 0;
-}
-
-/* line 422, ../sass/user-profile.scss */
 .friend-single {
   float: left;
   width: 24%;
@@ -541,25 +474,21 @@ h6 {
   margin-bottom: 10px;
 }
 
-/* line 429, ../sass/user-profile.scss */
 .friend-single:nth-child(4) {
   margin-right: 0;
 }
 
-/* line 433, ../sass/user-profile.scss */
 .friend-img {
   position: relative;
   margin-bottom: 1px;
 }
 
-/* line 438, ../sass/user-profile.scss */
 .friend-img img {
   width: 100%;
   height: auto;
   display: block;
 }
 
-/* line 444, ../sass/user-profile.scss */
 .friend-name {
   padding: 10px;
   font-size: 14px;
@@ -569,4 +498,52 @@ h6 {
   color: white;
   background-color: #1bb9b5;
   width: 100%;
+}
+
+.user-reviews {
+  border-bottom: 0;
+}
+
+.review-single {
+  margin-bottom: 30px;
+}
+
+.review-head {
+  margin-bottom: 10px;
+}
+
+.review-head--studio {
+  font-size: 18px;
+  line-height: 27px;
+  font-size: 1.125rem;
+  line-height: 1.6875rem;
+  color: #0069a0;
+  display: block;
+}
+
+.review-head--date {
+  font-size: 12px;
+  line-height: 18px;
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+}
+
+.review-body {
+  font-size: 14px;
+  line-height: 21px;
+  font-size: 0.875rem;
+  line-height: 1.3125rem;
+}
+
+.review-body--title {
+  font-weight: bold;
+}
+
+.review-body--copy {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 12px;
+  line-height: 18px;
+  font-size: 0.75rem;
+  line-height: 1.125rem;
 }
