Added User Ctrl Homepage

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -20,7 +20,9 @@ $row-padding:20px 0;
 
 $border-size:1px;
 $stroke:solid;
+$border:$border-size $stroke;
 
 // Font
 
 $Helvetica:"Helvetica Neue", Helvetica, Arial, sans-serif;
+$Oxygen:"Oxygen", Helvetica, Arial, sans-serif;
