--- a/css/user-profile.css
+++ b/css/user-profile.css
@@ -70,13 +70,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
   color: #777777;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: normal;
+  font-family: "Oxygen", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 18px;
   font-size: 0.875rem;
-  line-height: 1.3125rem;
-  line-height: 1.125em;
+  line-height: 1.125rem;
   margin: 50px 0;
 }
 
@@ -98,6 +97,7 @@ body {
 }
 
 a {
+  text-decoration: none;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -176,9 +176,6 @@ h6 {
   text-transform: uppercase;
   background-color: #0069a0;
   color: white;
-  -webkit-border-radius: 4px 4px;
-  -moz-border-radius: 4px / 4px;
-  border-radius: 4px / 4px;
 }
 
 .container {
@@ -186,20 +183,15 @@ h6 {
   margin: 20px auto;
 }
 
+.row {
+  padding: 20px 0;
+  border-bottom: 1px solid #ebebeb;
+}
+
 .left-panel {
   width: 200px;
   float: left;
   margin-right: 20px;
-}
-
-.profile-content {
-  width: 780px;
-  float: left;
-}
-
-.row {
-  padding: 20px 0;
-  border-bottom: 1px solid #ebebeb;
 }
 
 .left-panel-user.sticky {
@@ -276,6 +268,11 @@ h6 {
   display: inline-block;
   width: 20px;
   margin-right: 6px;
+}
+
+.profile-content {
+  width: 780px;
+  float: left;
 }
 
 .user-heading {
