--- a/sass/user-ctrl.scss
+++ b/sass/user-ctrl.scss
@@ -2,92 +2,8 @@
 // *********************************
 
 @import "base";
-
-// Control Panel Header
-// *********************************
-
-.user-ctrl-head {
-	@extend .clearfix;
-	padding-bottom:10px;
-}
-
-.user-name {
-	float:left;
-	line-height:50px;
-	color:$blue;
-}
-
-.user-ctrl-nav {
-	float:right;
-}
-
-.user-ctrl-nav li {
-	display:inline-block;
-	float:left;
-	margin:0 3px;
-
-	&:first-child {
-		margin-left:0;
-	}
-	&:last-child {
-		margin-right:0;
-	}
-}
-
-.user-ctrl-nav li a {
-	display:block;
-	height:50px;
-	width:50px;
-	@include font-size(1.5,3.125);
-	text-align:center;
-	color:$grey;
-	background-color:$white;
-	border:$border $dkgrey;
-
-	&.active, &:hover {
-		background-color:$ltgrey;
-		color:$teal;
-	}
-}
-
-// Left Panel
-// *********************************
-
-.left-panel {
-	float:left;
-	width:260px;
-}
-
-// Left Panel Modules
-// *********************************
-
-.left-panel .mod {
-	padding:20px;
-	padding-left:0;
-	border-bottom:$border $dkgrey;
-	@extend .clearfix;
-
-	&:last-child {
-		border-bottom:none;
-	}
-}
-
-.mod-single {
-	@extend .clearfix;
-	position:relative;
-}
-
-.mod-footlink {
-	float:right;
-	font-size:12px;
-	margin:10px 0 0 0;
-	color:$grey;
-	text-decoration:underline;
-}
-
-.mod-single span {
-	display:block;
-}
+@import "forms";
+@import "user-ctrl-master";
 
 // Event Mod
 // *********************************
@@ -146,6 +62,8 @@
 
 .friend-mod {
 	margin-bottom:10px;
+	background-color:$ltgrey;
+	border:$border $dkgrey;
 	&:last-child {
 		margin-bottom:0;
 	}
@@ -175,6 +93,12 @@
 
 .friend-mod--details .last {
 	font-weight:700;
+}
+
+.friends-invited .friend-mod {
+	display:inline-block;
+	width:220px;
+	margin-right:8px;
 }
 
 // Content
@@ -222,19 +146,5 @@
 	color:$blue;
 	&:hover{
 	text-decoration:underline;
-	}
-}
-
-.paging {
-	float:right;
-}
-
-.paging a {
-	font-weight:700;
-	&:hover {
-		background-color:$teal;
-	}
-	&.inactive {
-	background-color:#ddd;
 	}
 }
