--- a/css/user-ctrl.css
+++ b/css/user-ctrl.css
@@ -167,15 +167,18 @@ h6 {
 
 .btn {
   display: inline-block;
-  height: 30px;
-  padding: 0 10px;
+  height: 40px;
+  padding: 0 20px;
   text-align: center;
   font-size: 12px;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 40px;
   text-transform: uppercase;
   background-color: #0069a0;
   color: white;
+  -webkit-border-radius: 4px 4px;
+  -moz-border-radius: 4px / 4px;
+  border-radius: 4px / 4px;
 }
 
 .container {
@@ -186,6 +189,202 @@ h6 {
 .row {
   padding: 20px 0;
   border-bottom: 1px solid #ebebeb;
+}
+
+form {
+  margin-top: 20px;
+}
+
+form input,
+form select,
+form textarea {
+  font-size: 14px;
+}
+
+form > div {
+  display: inline-block;
+}
+
+form > div.form-row {
+  display: block;
+  margin-bottom: 20px;
+  overflow: visible;
+}
+
+label {
+  display: inline-block;
+  width: 120px;
+  text-align: right;
+  vertical-align: middle;
+  padding-right: 20px;
+}
+
+input[type="text"],
+input[type="phone"],
+input[type="password"],
+input[type="email"],
+input[type="date"],
+input[type="checkbox"] {
+  height: 40px;
+  width: 100%;
+  border: 1px solid #ebebeb;
+  outline: none;
+  padding: 10px;
+  vertical-align: middle;
+}
+input[type="text"]:focus,
+input[type="phone"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="date"]:focus,
+input[type="checkbox"]:focus {
+  border: 1px solid #1bb9b5;
+}
+
+textarea {
+  width: 100%;
+  height: 160px;
+  border: 1px solid #ebebeb;
+  resize: none;
+  outline: none;
+  padding: 10px;
+}
+textarea:focus {
+  border: 1px solid #1bb9b5;
+}
+
+.top {
+  vertical-align: top;
+  padding-top: 5px;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.col-4-4 {
+  display: inline-block;
+  width: 560px;
+}
+
+.date > div {
+  display: inline-block;
+  width: 140px;
+}
+
+.time > div {
+  display: inline-block;
+  width: 80px;
+}
+
+.time > label {
+  width: 70px;
+}
+
+.repeat > div {
+  display: inline-block;
+  width: 168px;
+}
+
+.repeat > label {
+  width: 90px;
+}
+
+.activities input[type="checkbox"] {
+  display: none;
+}
+
+.activities label {
+  border: 1px solid #ebebeb;
+  height: 40px;
+  width: auto;
+  padding: 0 20px;
+  text-align: center;
+  line-height: 40px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.activities input[type="checkbox"]:checked + label {
+  background-color: #efefef;
+}
+
+.form-buttons {
+  float: right;
+}
+.form-buttons a {
+  font-weight: 700;
+  cursor: pointer;
+  height: 40px;
+  line-height: 40px;
+}
+.form-buttons a:hover {
+  background-color: #1bb9b5;
+}
+
+.ui-datepicker {
+  margin-top: 2px;
+  text-align: center;
+  position: relative;
+}
+
+.ui-datepicker-header {
+  height: 40px;
+  line-height: 40px;
+  background-color: #444;
+  color: #fff;
+}
+
+.ui-datepicker-prev,
+.ui-datepicker-next {
+  position: absolute;
+}
+
+.ui-datepicker-prev {
+  left: 10px;
+}
+
+.ui-datepicker-next {
+  right: 10px;
+}
+
+.ui-datepicker-calendar {
+  border-bottom: 1px solid #dddddd;
+}
+
+.ui-datepicker-calendar tr td,
+.ui-datepicker-calendar tr th {
+  background-color: whitesmoke;
+  margin-top: 2px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  margin: 2px;
+  color: #444;
+}
+.ui-datepicker-calendar tr td a,
+.ui-datepicker-calendar tr th a {
+  color: #444;
+}
+
+.ui-datepicker-calendar tr td:hover {
+  background-color: #1bb9b5;
+}
+.ui-datepicker-calendar tr td:hover a {
+  color: #fff;
+}
+
+.ui-datepicker-calendar tr th {
+  background-color: #ddd;
+}
+
+.ui-datepicker-calendar tr td {
+  cursor: pointer;
+}
+
+.ui-datepicker-current-day {
+  background-color: #0069a0;
 }
 
 .user-ctrl-head {
@@ -262,6 +461,20 @@ h6 {
   display: block;
 }
 
+.paging {
+  float: right;
+}
+
+.paging a {
+  font-weight: 700;
+}
+.paging a:hover {
+  background-color: #1bb9b5;
+}
+.paging a.inactive {
+  background-color: #ddd;
+}
+
 .event-mod .edit {
   position: absolute;
   top: 0;
@@ -318,6 +531,8 @@ h6 {
 
 .friend-mod {
   margin-bottom: 10px;
+  background-color: whitesmoke;
+  border: 1px solid #ebebeb;
 }
 .friend-mod:last-child {
   margin-bottom: 0;
@@ -350,6 +565,12 @@ h6 {
 
 .friend-mod--details .last {
   font-weight: 700;
+}
+
+.friends-invited .friend-mod {
+  display: inline-block;
+  width: 220px;
+  margin-right: 8px;
 }
 
 .user-ctrl-content {
@@ -393,18 +614,4 @@ h6 {
 }
 .user-stream--msg a:hover {
   text-decoration: underline;
-}
-
-.paging {
-  float: right;
-}
-
-.paging a {
-  font-weight: 700;
-}
-.paging a:hover {
-  background-color: #1bb9b5;
-}
-.paging a.inactive {
-  background-color: #ddd;
 }
