--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -34,7 +34,8 @@ input[type="phone"],
 input[type="password"],
 input[type="email"],
 input[type="date"],
-input[type="checkbox"] {
+input[type="checkbox"],
+select {
 	height:40px;
 	width:100%;
 	border:$border $dkgrey;
@@ -56,6 +57,15 @@ textarea {
 	&:focus {
 		border:$border $teal;
 	}
+}
+
+select {
+	appearance:none;
+	-webkit-appearance:none;
+	outline:none;
+	border:$border $dkgrey;
+	border-radius:0;
+	-webkit-border-radius:0;
 }
 
 .top {
