--- a/css/user-ctrl.css
+++ b/css/user-ctrl.css
@@ -262,6 +262,10 @@ select {
   border: 1px solid #ebebeb;
   border-radius: 0;
   -webkit-border-radius: 0;
+  background-image: url("../img/down.png");
+  background-position: right center;
+  background-repeat: no-repeat;
+  padding-right: 26px;
 }
 
 .top {
