--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -66,6 +66,10 @@ select {
 	border:$border $dkgrey;
 	border-radius:0;
 	-webkit-border-radius:0;
+	background-image:url('../img/down.png');
+	background-position:right center;
+	background-repeat:no-repeat;
+	padding-right:26px;
 }
 
 .top {
