--- a/css/user-ctrl.css
+++ b/css/user-ctrl.css
@@ -191,20 +191,9 @@ h6 {
   border-bottom: 1px solid #ebebeb;
 }
 
-form {
-  margin-top: 20px;
-}
-
-form input,
-form select,
-form textarea {
-  font-size: 14px;
-}
-
 form > div {
   display: inline-block;
 }
-
 form > div.form-row {
   display: block;
   margin-bottom: 20px;
@@ -232,6 +221,7 @@ select {
   outline: none;
   padding: 10px;
   vertical-align: middle;
+  font-size: 14px;
 }
 input[type="text"]:focus,
 input[type="phone"]:focus,
@@ -289,18 +279,16 @@ select {
 
 .time > div {
   display: inline-block;
-  width: 80px;
+  width: 110px;
 }
-
 .time > label {
   width: 70px;
 }
 
 .repeat > div {
   display: inline-block;
-  width: 168px;
+  width: 138px;
 }
-
 .repeat > label {
   width: 90px;
 }
@@ -308,7 +296,9 @@ select {
 .activities input[type="checkbox"] {
   display: none;
 }
-
+.activities input[type="checkbox"]:checked + label {
+  background-color: #efefef;
+}
 .activities label {
   border: 1px solid #ebebeb;
   height: 40px;
@@ -318,10 +308,17 @@ select {
   line-height: 40px;
   background-color: #fff;
   cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
-
-.activities input[type="checkbox"]:checked + label {
+.activities label:hover {
   background-color: #efefef;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .form-buttons {
