--- a/css/user-ctrl.css
+++ b/css/user-ctrl.css
@@ -188,7 +188,7 @@ h6 {
 
 .row {
   padding: 20px 0;
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: 1px solid #dddddd;
 }
 
 form > div {
@@ -217,7 +217,7 @@ input[type="checkbox"],
 select {
   height: 40px;
   width: 100%;
-  border: 1px solid #ebebeb;
+  border: 1px solid #dddddd;
   outline: none;
   padding: 10px;
   vertical-align: middle;
@@ -236,7 +236,7 @@ select:focus {
 textarea {
   width: 100%;
   height: 160px;
-  border: 1px solid #ebebeb;
+  border: 1px solid #dddddd;
   resize: none;
   outline: none;
   padding: 10px;
@@ -249,7 +249,7 @@ select {
   appearance: none;
   -webkit-appearance: none;
   outline: none;
-  border: 1px solid #ebebeb;
+  border: 1px solid #dddddd;
   border-radius: 0;
   -webkit-border-radius: 0;
   background-image: url("../img/down.png");
@@ -300,7 +300,7 @@ select {
   background-color: #efefef;
 }
 .activities label {
-  border: 1px solid #ebebeb;
+  border: 1px solid #dddddd;
   height: 40px;
   width: auto;
   padding: 0 20px;
@@ -361,7 +361,10 @@ select {
 }
 
 .ui-datepicker-calendar {
-  border-bottom: 1px solid #dddddd;
+  border: 1px solid #dddddd;
+  -webkit-box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.15);
 }
 
 .ui-datepicker-calendar tr td,
@@ -436,7 +439,7 @@ select {
   text-align: center;
   color: #777777;
   background-color: white;
-  border: 1px solid #ebebeb;
+  border: 1px solid #dddddd;
 }
 .user-ctrl-nav li a.active, .user-ctrl-nav li a:hover {
   background-color: whitesmoke;
@@ -451,7 +454,7 @@ select {
 .left-panel .mod {
   padding: 20px;
   padding-left: 0;
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: 1px solid #dddddd;
 }
 .left-panel .mod:last-child {
   border-bottom: none;
@@ -543,11 +546,23 @@ select {
 
 .friend-mod {
   margin-bottom: 10px;
-  background-color: whitesmoke;
-  border: 1px solid #ebebeb;
+  background-color: white;
+  border: 1px solid #dddddd;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 .friend-mod:last-child {
   margin-bottom: 0;
+}
+.friend-mod:hover {
+  background-color: whitesmoke;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .friend-mod--image {
@@ -595,7 +610,7 @@ select {
   min-height: 500px;
   padding: 20px;
   margin-bottom: 20px;
-  border-left: 1px solid #ebebeb;
+  border-left: 1px solid #dddddd;
 }
 
 .user-stream-single {
