--- a/css/user-profile.css
+++ b/css/user-profile.css
@@ -188,7 +188,7 @@ h6 {
 
 .row {
   padding: 20px 0;
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: 1px solid #dddddd;
 }
 
 .left-panel {
@@ -246,7 +246,7 @@ h6 {
 }
 
 .user-nav {
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: 1px solid #dddddd;
 }
 .user-nav li a {
   display: block;
@@ -255,7 +255,7 @@ h6 {
   font-weight: bold;
   padding: 12px 0 12px 15px;
   background-color: whitesmoke;
-  border-top: 1px solid #ebebeb;
+  border-top: 1px solid #dddddd;
 }
 .user-nav li a:hover {
   background-color: white;
@@ -368,7 +368,7 @@ h6 {
 
 .badge-image {
   margin-bottom: 10px;
-  border: 5px solid #ebebeb;
+  border: 5px solid #dddddd;
   width: 125px;
   height: 125px;
   -webkit-border-radius: 50% 50%;
@@ -410,7 +410,7 @@ h6 {
 .place-single {
   width: 100%;
   float: left;
-  border: 1px solid #ebebeb;
+  border: 1px solid #dddddd;
   height: 82px;
   margin-bottom: 10px;
 }
