--- a/sass/user-ctrl.scss
+++ b/sass/user-ctrl.scss
@@ -62,10 +62,17 @@
 
 .friend-mod {
 	margin-bottom:10px;
-	background-color:$ltgrey;
+	background-color:$white;
 	border:$border $dkgrey;
+	@include transition(all 0.3s ease-in-out);
+	cursor:pointer;
+	
 	&:last-child {
 		margin-bottom:0;
+	}
+	&:hover {
+		background-color:$ltgrey;
+		@include transition(all 0.3s ease-in-out);
 	}
 }
 
