--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,11 @@ $grey:#777;
 $ltgrey:#f5f5f5;
 $dkgrey:#ddd;
 $white:#fff;
+$black:#000;
+$black2:#222;
+$black4:#444;
+$black6:#666;
+$black8:#888;
 
 // Padding & Margins
 
