--- a/sass/user-ctrl-friends.scss
+++ b/sass/user-ctrl-friends.scss
@@ -1,6 +1,10 @@
 // User Control - Friends
 // *********************************
 
+.user-ctrl-friends.content {
+	padding-right:0;
+}
+
 .my-friends {
 	margin:20px 0;
 
